Frontend display chessboard by fen + regex pattern match to valid FEN backend/frontend

--- a/frontend/react/src/css/styles.css
+++ b/frontend/react/src/css/styles.css
@@ -54,7 +54,8 @@ ul {
   visibility: hidden;
 }
 
-.board {
-  display: inline-grid;
-  grid-template-columns: repeat(8, 1fr);
+.chessboard {
+  display: flex;
+  flex-wrap: wrap;
+  width: 480px;
 }
