--- a/frontend/react/src/css/squares.css
+++ b/frontend/react/src/css/squares.css
@@ -1,22 +1,14 @@
 .square {
-  background: #fff;
-  border: 1px solid #999;
+  background-color: #ffd599;
   float: left;
-  font-size: 40px;
-  font-weight: bold;
-  line-height: 50px;
-  height: 50px;
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
-  text-align: center;
-  width: 50px;
+  width: 60px;
+  height: 60px;
 }
 
-.square:hover {
-  background-color: #c1c1c1;
+.square.light {
+  background-color: #ffd599;
 }
 
-.square:focus {
-  background-color: rgb(168, 252, 252);
+.square.dark {
+  background-color: #B06E40;
 }
