--- a/frontend/react/src/css/squares.css
+++ b/frontend/react/src/css/squares.css
@@ -1,7 +1,17 @@
+.chessboard {
+  display: grid;
+  grid-template-columns: repeat(8, 60px);
+  grid-template-rows: repeat(8, 60px);
+  border: 10px solid #141414;
+  max-width: 500px;
+}
+
 .square {
-  float: left;
   width: 60px;
   height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .square.light {
@@ -12,17 +22,33 @@
   background-color: #b58863;
 }
 
-.square.hover {
-  background-color: yellowgreen;
+.square.target {
+  background-color: #6e0000ea;
 }
 
-.square div {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 32px;
-  font-weight: bold;
-  pointer-events: none; /* To ensure the div does not intercept the drag events */
+.square.selected {
+  background-color: #164d00;
+}
+
+.legal-move {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: #164d00;
+}
+
+.legal-move-enemy {
+  height: 60px;
+  width: 60px;
+  border-radius: 40%;
+  display: inline-block;
+}
+
+.legal-move-enemy.light {
+  background-color: #f0d9b5;
+}
+
+.legal-move-enemy.dark {
+  background-color: #b58863;
 }
