--- a/frontend/react/src/css/toggle.css
+++ b/frontend/react/src/css/toggle.css
@@ -51,12 +51,10 @@
   background-color: #fff;
 }
 
-/* Text beside the toggle */
-/* put text in the center */
 .container-toggle {
   display: flex;
-  justify-content: center;
   align-items: center;
+  width: 660px;
   margin-top: 2.5rem;
   margin-bottom: 1rem;
 }
